fix(chat): prevents wrapping of title hint text.

--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -740,7 +740,7 @@ $suggests-max-height: 200px;
   width: 0;
 
   .rt-input-hint {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 14px;
     margin-left: $margin-default;
     top: 28px;
